       "REDACTED".
     - Expanded the documentation of Snowflake key pair authentication in
      `sqitch-authentication.pod` to recommend setting sensitive ODBC
       parameters in an `odbc.ini` file rather than connection URL query
       parameters.
     - Switched to key pair authentication in the Snowflake CI workflows.

1.5.1  2025-03-16T26:55:17Z
     - Fixed a bug introduced in v1.5.0 where the MySQL engine connected to
       the target database instead of the registry database. Thanks to
       @tiberiusferreira for the report (#862)!
     - Fixed test failures with some Exasol and Firebird configurations.
       Thanks to Slaven Rezić for the report (#858)!
     - Added some missing German translations, thanks to @0xflotus (#873).

1.5.0  2025-01-08T03:22:40
     - Fix improperly nested Pod headers that were incrementing two levels
       relative to their parent headers, which messed with the HTML output on
       sqitch.org.
     - Banned "[" and "]" in names (changes, tags, projects) because they
       muck with dependency parsing of the plan file. Thanks to Žiga Leber for
       the bug report (#829).
     - Updated the IPC methods that interact with engine clients to raise
       exception objects rather than strings, for more consistent error
       handling throughout.
     - Removed duplicate DBI error handling code from engines and tests.
     - Fixed an order of operation issue that prevented Sqitch from detecting
       Yugabyte before attempting to create an advisory lock, which resulted
       in an error for more recent Yugabyte releases. Thanks to Stefano
       Ricciardi for the report (#841).
     - Removed a wayward mention of the long-deprecated `SQITCH_URI`
       environment variable from the Oracle tutorial. Thanks to Austin Hanson
       for the report (#845).
     - Improved unexpected error output by including any previous exception.
     - Changed the "unknown engine" error to a runtime error, rather than